# vmui-agent

./: .gitignore  AGENTS.md  Cargo.toml  README.md  code_review.md  justfile
.agents/skills/vmui-proto-sync/: SKILL.md
.agents/skills/vmui-review/: SKILL.md
.agents/skills/vmui-verify/: SKILL.md
.beads/: config.yaml  metadata.json
.codex/: config.toml
.github/workflows/: ci.yml
crates/vmui-agent/: AGENTS.md  Cargo.toml
crates/vmui-agent/src/: lib.rs  main.rs  tests.rs
crates/vmui-core/: AGENTS.md  Cargo.toml
crates/vmui-core/src/: lib.rs
crates/vmui-mcp-proxy/: Cargo.toml
crates/vmui-mcp-proxy/examples/: remote_notepad_smoke.rs  remote_session_smoke.rs
crates/vmui-mcp-proxy/src/: lib.rs  main.rs
crates/vmui-mcp-proxy/tests/: stdio_integration.rs
crates/vmui-platform/: Cargo.toml
crates/vmui-platform-windows/: AGENTS.md  Cargo.toml
crates/vmui-platform-windows/src/: lib.rs  tests.rs  windows_impl.rs
crates/vmui-platform/src/: lib.rs
crates/vmui-protocol/: Cargo.toml
crates/vmui-protocol/src/: lib.rs
crates/vmui-transport-grpc/: AGENTS.md  Cargo.toml  build.rs
crates/vmui-transport-grpc/src/: lib.rs
docs/: architecture.md  codex-setup.md  codex-workflow.md  dev-runbook.md  index.md  protocol.md  roadmap.md  windows-vm-access.md  windows-vm-bootstrap.md
openspec/: project.md
openspec/changes/add-01-daemon-session-foundation/: design.md  tasks.md
openspec/changes/add-01-daemon-session-foundation/specs/daemon-session-api/: spec.md
openspec/changes/add-01-daemon-session-foundation/specs/ui-state-cache/: spec.md
openspec/changes/add-02-windows-ui-observer/: design.md  proposal.md  tasks.md
openspec/changes/add-02-windows-ui-observer/specs/windows-ui-observer/: spec.md
openspec/changes/add-03-semantic-actions-and-artifacts/: proposal.md  tasks.md
openspec/changes/add-03-semantic-actions-and-artifacts/specs/artifact-capture/: spec.md
openspec/changes/add-03-semantic-actions-and-artifacts/specs/semantic-action-execution/: spec.md
openspec/changes/add-04-onec-diagnostic-workflows/: design.md  tasks.md
openspec/changes/add-04-onec-diagnostic-workflows/specs/onec-diagnostic-workflows/: spec.md
openspec/changes/add-05-mcp-bridge-and-runtime-hardening/: design.md  proposal.md  tasks.md
openspec/changes/add-05-mcp-bridge-and-runtime-hardening/specs/daemon-runtime-hardening/: spec.md
openspec/changes/add-05-mcp-bridge-and-runtime-hardening/specs/mcp-bridge/: spec.md
openspec/changes/add-07-generic-windows-observation-profile/specs/daemon-session-api/: spec.md
openspec/changes/add-07-generic-windows-observation-profile/specs/mcp-bridge/: spec.md
openspec/changes/add-08-onec-out-of-process-panel-probe/: design.md  proposal.md  tasks.md
openspec/changes/add-08-onec-out-of-process-panel-probe/specs/onec-panel-probe/: spec.md
openspec/changes/add-09-onec-behavioral-tree-mapper/: design.md  proposal.md  tasks.md
openspec/changes/add-09-onec-behavioral-tree-mapper/specs/onec-behavioral-tree-mapper/: spec.md
openspec/changes/add-10-onec-message-level-panel-probe/: design.md  proposal.md  tasks.md
openspec/changes/add-10-onec-message-level-panel-probe/specs/onec-message-level-panel-probe/: spec.md
openspec/changes/add-11-onec-inprocess-panel-instrumentation/: design.md  proposal.md  tasks.md
openspec/changes/add-11-onec-inprocess-panel-instrumentation/specs/onec-inprocess-panel-instrumentation/: spec.md
openspec/changes/archive/2026-04-03-add-01-daemon-session-foundation/: proposal.md
openspec/changes/archive/2026-04-03-add-02-windows-ui-observer/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-03-add-02-windows-ui-observer/specs/windows-ui-observer/: spec.md
openspec/changes/archive/2026-04-03-add-03-semantic-actions-and-artifacts/: design.md  tasks.md
openspec/changes/archive/2026-04-04-add-04-onec-diagnostic-workflows/: proposal.md  tasks.md
openspec/changes/archive/2026-04-04-add-05-mcp-bridge-and-runtime-hardening/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-04-add-05-mcp-bridge-and-runtime-hardening/specs/daemon-runtime-hardening/: spec.md
openspec/changes/archive/2026-04-04-add-05-mcp-bridge-and-runtime-hardening/specs/mcp-bridge/: spec.md
openspec/changes/archive/2026-04-05-add-06-remote-vm-control-plane/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-05-add-07-generic-windows-observation-profile/: design.md  proposal.md  tasks.md
openspec/specs/artifact-capture/: spec.md
openspec/specs/daemon-runtime-hardening/: spec.md
openspec/specs/daemon-session-api/: spec.md
openspec/specs/mcp-bridge/: spec.md
openspec/specs/onec-diagnostic-workflows/: spec.md
openspec/specs/remote-vm-control-plane/: spec.md
openspec/specs/semantic-action-execution/: spec.md
openspec/specs/ui-state-cache/: spec.md
openspec/specs/windows-ui-observer/: spec.md
proto/: AGENTS.md
proto/vmui/v1/: agent.proto
scripts/: check-agent-docs.sh  doctor.sh
scripts/vm/: build.sh  common.sh  notepad-smoke.sh  powershell.sh  pull-artifacts.sh  restart-agent.sh  run-smoke.sh  ssh.sh  sync.sh  tunnel.sh  vm.env.example
scripts/vm/windows/: run-vmui-smoke.ps1  start-vmui-agent.ps1
(+3 files in other folders)
