[package]
name = "vmui-transport-grpc"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
build = "build.rs"

[dependencies]
chrono.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
vmui-protocol = { path = "../vmui-protocol" }

[build-dependencies]
protoc-bin-vendored.workspace = true
tonic-prost-build.workspace = true
